<resources>
    <string name="app_name">DrawerReplacement</string>
    <string name="chevronStates">Open or closed chevron.</string>
    <string name="the_main_content">The Main Content</string>
    <string name="song_title">Song Title</string>
    <string name="background">Background</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="animate">Animate</string>
    <string name="playing_all_night">Playing for a bit</string>
    <string name="sounds">Sounds</string>
    <string name="blueSongs">Blue Songs</string>
    <string name="blueDuration">Playing until you\'ve cheered up</string>
    <string name="greenSongs">Green Songs</string>
    <string name="greenDuration">Playing until you\'re satisfied</string>
    <string name="redSongs">Red Songs</string>
    <string name="redDuration">Playing until you\'ve calmed down</string>
    <string name="volume_indicator">Volume indicator</string>
    <string name="as_spec">As Spec</string>
    <string name="smoother">Smoother</string>
    <string name="bitmap">Bitmap</string>
</resources>
