<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:src="@drawable/ic_image_black_24dp"
        android:tint="@android:color/holo_green_dark"
        android:transitionName="backgroundTransition" />

    <TextView
        android:id="@+id/songTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textSize="32sp"
        android:transitionName="textTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/previousMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_chevron_left_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/playButtonMain"
        app:layout_constraintEnd_toStartOf="@id/playButtonMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playButtonMain" />

    <ImageView
        android:id="@+id/playButtonMain"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:transitionName="slidePlay"
        app:layout_constraintBottom_toTopOf="@id/seekbarLayoutMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songTitleMain"
        app:layout_constraintVertical_bias="0.65" />

    <ImageView
        android:id="@+id/nextMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/playButtonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playButtonMain"
        app:layout_constraintTop_toTopOf="@id/playButtonMain" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/seekbarLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>