<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pajato.drawerreplacement.SecondaryActivity">

    <Button
        android:id="@+id/animationTrigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="animate"
        android:text="@string/animate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/songImageMain"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/background"
        android:src="@drawable/ic_image_black_24dp"
        android:tint="@android:color/holo_green_dark"
        android:transitionName="backgroundTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/songTitleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingBottom="2dp"
        android:text="@string/song_title"
        android:textSize="16sp"
        android:transitionName="textTransition"
        app:layout_constraintBottom_toBottomOf="@id/songImageMain"
        app:layout_constraintLeft_toRightOf="@id/songImageMain"
        app:layout_constraintTop_toTopOf="@id/songImageMain" />

    <ImageView
        android:id="@+id/previousMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/previous"
        android:src="@drawable/ic_chevron_left_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/playButtonMain"
        app:layout_constraintEnd_toStartOf="@id/playButtonMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playButtonMain" />

    <ImageView
        android:id="@+id/playButtonMain"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/play"
        android:onClick="transitionActivity"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:transitionName="slidePlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/nextMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/next"
        android:src="@drawable/ic_chevron_right_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/playButtonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/playButtonMain"
        app:layout_constraintTop_toTopOf="@id/playButtonMain" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/seekbarLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
